<resources>
    <string name="app_name" translatable="false">FlowARt: AR Drawing Sketch Art</string>

    <string name="admob_app_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="fb_app_id" translatable="false"></string>
    <string name="facebook_client_token" translatable="false"></string>
    <string name="rating_email" translatable="false"></string>

    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="spanish">Spanish</string>
    <string name="french">French</string>
    <string name="arabic">Arabic</string>
    <string name="bengali">Bengali</string>
    <string name="russian">Russian</string>
    <string name="portuguese">Portuguese</string>
    <string name="indonesian">Indonesian</string>
    <string name="german">German</string>
    <string name="italian">Italian</string>
    <string name="korean">Korean</string>
    <string name="please_select_language">Please select language first.</string>
    <string name="next">Next</string>
    <string name="no_email_client_installed">No email client installed</string>
    <string name="start">Start</string>
    <string name="please_select_language_first">Please select language first!</string>


    <string name="title_intro_1">Create Animation</string>
    <string name="title_intro_2">Fun To Animate</string>
    <string name="title_intro_3">Line Animation</string>

    <string name="message_intro_1">It has never been easier to become an animator with simple approach</string>
    <string name="message_intro_2">Create animation in your own unique manner with basic drawings</string>
    <string name="message_intro_3">Create animation by drawing a line with your finger.</string>
    <string name="home">Home</string>
    <string name="lesson">Lesson</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="flowart_ar_drawing_sketch_art">FlowARt: AR Drawing Sketch Art</string>
    <string name="what_will_you_explore_today">What will you explore today?</string>
    <string name="your_drawing_journey">Your Drawing Journey</string>
    <string name="let_s_tune_tour_app">Let’s Tune Tour App</string>
    <string name="beginner">Beginner</string>
    <string name="learn_the_basics_step_by_step">Learn the basics step-by-step</string>
    <string name="intermediate">Intermediate</string>
    <string name="enhance_your_style_and_techniques">Enhance your style and techniques</string>
    <string name="professional">Professional</string>
    <string name="master_advanced_and_creative_skills">Master advanced and creative skills</string>
    <string name="see_all">See all</string>
    <string name="chibi">Chibi</string>
    <string name="library">Library</string>
    <string name="cartoon">Cartoon</string>
    <string name="trending">Trending</string>
    <string name="recent">Recent</string>
    <string name="anime">Anime</string>
    <string name="animal">Animal</string>
    <string name="flower">Flower</string>
    <string name="sketch">Sketch</string>
    <string name="trace">Trace</string>


</resources>