<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/mainBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    tools:context=".activities.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="56dp"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvTitle"
            style="@style/mHeading.H1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:scrollHorizontally="true"
            android:text="@string/flowart_ar_drawing_sketch_art"
            android:textColor="@color/mainTextColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ivInfo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:src="@drawable/ic_info"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vpMain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/lBottom"
        app:layout_constraintTop_toBottomOf="@id/lTitle" />

    <LinearLayout
        android:id="@+id/lBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:background="@drawable/bg_navigation"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/viewLine"
        app:layout_goneMarginBottom="0dp">

        <TextView
            android:id="@+id/navHome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="2dp"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:text="@string/home"
            style="@style/mMeta.m1"
            android:textColor="@color/mainTextColor"
            app:drawableTopCompat="@drawable/selector_home" />

        <TextView
            android:id="@+id/navLesson"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="2dp"
            android:gravity="center"
            style="@style/mMeta.m1"
            android:paddingVertical="10dp"
            android:text="@string/lesson"
            android:textColor="@color/unSelectedText"
            app:drawableTopCompat="@drawable/selector_lesson" />

        <TextView
            android:id="@+id/navGallery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="2dp"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:text="Gallery"
            style="@style/mMeta.m1"
            android:textColor="@color/unSelectedText"
            app:drawableTopCompat="@drawable/selector_gallery" />

        <TextView
            android:id="@+id/navSetting"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="2dp"
            android:gravity="center"
            style="@style/mMeta.m1"
            android:paddingVertical="10dp"
            android:text="Setting"
            android:textColor="@color/unSelectedText"
            app:drawableTopCompat="@drawable/selector_setting" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lLoading"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clickable="true"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/vpMain"
        app:layout_constraintTop_toTopOf="@id/vpMain">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:indicatorColor="@color/primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/viewLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/frBanner" />

    <FrameLayout
        android:id="@+id/frBanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent" />

    <FrameLayout
        android:id="@+id/frNative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent" />

    <View
        android:id="@+id/vShowInterAds"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00000000"
        android:clickable="true"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>